--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: external_video_player_launcher
-description: A laucher that can lauch url with MxPlayer and VLC player
-version: 0.0.1
-homepage: "https://x.com"
+description: An external video player laucher that can lauch url/dir with MxPlayer and VLC player and Other Player
+version: 0.0.2
+homepage: "https://github.com/b14cknc0d3/extern_video_player_launcher.git"
 
 platform:
   android:
